testsuite/tests/properties/invalid_dflt_arg_val/bad_literal_2.lkt
import common

class Example: FooNode {
    @exported fun p(a: Bool, b: Bool=true == false): Bool = a and b
}
